# rust-game

./: Cargo.toml  LICENSE  README.md
assets/: bird.glb  box.glb
memo/: gltfバグ問題.md
src/: main.rs
src/core_module/: camera.rs  mod.rs  state.rs
備忘録/: gltfバグ問題.md
