[package]
name = "rust-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# logging
env_logger = { version = "0.10", default-features = false, features = ["auto-color", "humantime"] }
# Linear algebra library
glam = "0.24"
# Renderer core
rend3 = { version = "^0.3.0", path = "../rend3/rend3" }
# Programmable render list that dictates how the scene renders
rend3-routine = { version = "^0.3.0", path = "../rend3/rend3-routine" }
rend3-gltf={ version = "^0.3.0", path = "../rend3/rend3-gltf" }
# Provides `block_on` to wait for futures from sync code
pollster = "0.3"
# windowing
winit = "0.29.4"
wgpu="0.19.0"
# Importing images and Loading glb/gltf texture
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
    "tiff",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = "0.3.67"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4"
